--- a/index.html
+++ b/index.html
@@ -1,19 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-    <h1># Nattapat.github.io</h1>
+<body class="bg">
 
-    <h3># Nattapat Klinjan</h3>
-    <h3># Nat</h3>
-    <h3># 05</h3>
-    <h3># IT 5101</h3>
-    <h3># ID Student 66309010012</h3>
-    
+    <div class="container">
+        <div class="row card-center">
+            <div class="col-md-12 col-bg">
+                <div class="card card-bg-blur card-height">
+                    <div class="card-body">
+
+                        <div class="row">
+                            <div class="col-md-3">
+                                <p href="#" class="card-bg-blur-two px-3 py-2 text-center fs-4 rounded animate__animated animate__slideInDown">Nattapat Klinjan</p>
+                                <div class="card border-0 my-3 card-bg-blur-two animate__animated animate__slideInDown">
+                                    <div class="card-body p-0">
+                                        <h5 class="mb-0 mt-1">Contect</h5>
+                                        <hr class="mt-2 mb-3">
+                                        <h6><i class="fa-brands fa-instagram me-2"></i> <a href="" class="text-decoration-none">_nattapat.05</a></h6>
+                                        <h6><i class="fa-brands fa-facebook me-2"></i> <a href="" class="text-decoration-none">Nattapat Klinjan</a></h6>
+                                        <h6><i class="fa-solid fa-envelope me-2"></i> <a href="" class="text-decoration-none">natota4801@gmail.com</a></h6>
+                                        <h6><i class="fa-solid fa-phone me-2"></i> 061-342-9077</h6>
+                                    </div>
+                                </div>
+                                <div class="card border-0 my-3 card-bg-blur-two animate__animated animate__slideInDown">
+                                    <div class="card-body p-0">
+                                        <h5 class="mb-0">ประวัติการทำงาน <i class="fa-solid fa-gear ms-2"></i></h5>
+                                        <hr class="mt-2 mb-3">
+                                        <h6><i class="fa-solid fa-school-flag me-2"></i><strong>Admin/บัญชี :</strong> 1 อะไหล่เจริญเมือง <br>(มีนาคม 2565 - เมษายน 2565)</h6>
+                                        <h6><i class="fa-solid fa-school-flag me-2"></i><strong>IT Support :</strong> สถาบันภาษา มช. <br>(มกราคม 2566 - ปัจจุบัน)</h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                                <div class="card-profile">
+                                    <img src="image/background.jpg" alt="profile" class="profile-center animate__animated animate__tada">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="educations">
+                                    <div class="card w-100 border-0 card-bg-blur-two mb-3 animate__animated animate__slideInUp">
+                                        <div class="card-body py-2 px-3">
+                                            <h5 class="mb-0 mt-1">ข้อมูลส่วนตัว <i class="fa-regular fa-face-smile-wink ms-2"></i></h5>
+                                            <hr class="mt-2 mb-3">
+                                            <h6><i class="fa-solid fa-user me-2"></i> ณัฐภัทร กลิ่นจันทร์ (นัท)</h6>
+                                            <h6><i class="fa-solid fa-cake-candles me-2"></i> 28 กุมภาพันธ์ 2548</h6>
+                                            <div class="row">
+                                                <div class="col-md-4"><h6><i class="fa-solid fa-baby me-2"></i> 19 Year</h6></div>
+                                                <div class="col-md-5"><h6><i class="fa-solid fa-person-praying me-2"></i> Buddhism</h6></div>
+                                                <div class="col-md-3"><h6><i class="fa-solid fa-droplet me-2"></i> A</h6></div>
+                                            </div>
+                                            <h6><i class="fa-solid fa-location-dot me-3"></i> หางดง, เชียงใหม่</h6>
+                                        </div>
+                                    </div>
+                                    <div class="card w-100 border-0 card-bg-blur-two animate__animated animate__slideInUp">
+                                        <div class="card-body py-2 px-3">
+                                            <h5 class="mb-0 mt-1">Educations</h5>
+                                            <hr class="mt-2 mb-3">
+                                            <h6><i class="fa-solid fa-graduation-cap me-2"></i> โรงเรียนวัฒโนทัยพายัพ</h6>
+                                            <h6><i class="fa-solid fa-graduation-cap me-2"></i> วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา เชียงใหม่</h6>
+                                            <h6 class="text-success"><i class="fa-solid fa-graduation-cap me-2"></i> วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา เชียงใหม่</h6>
+                                            <h6><i class="fa-solid fa-arrow-right me-3"></i> วิศวะคอมพิวเตอร์ มทร.ล้านนา</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="card card-top"></div>
+                <div class="card card-bottom"></div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
